--- a/style.css
+++ b/style.css
@@ -2,3 +2,38 @@ p {
   color : cornflowerblue;
   background-color : yellow;
 }
+
+th {
+  width : 50px;
+  height : 50px;
+}
+
+td {
+  width : 50px;
+  height : 50px;
+}
+
+td::hover {
+  animation-name : hov;
+  animation-duration : 1s;
+}
+
+th::hover {
+  animation-name : hov;
+  animation-duration : 1s;
+}
+
+tr::hover {
+  animation-name : hov2;
+  animation-duration : 1s;
+}
+
+@keyframes hov {
+  from{background-color : rgba(1.0, 1.0, 1.0, 0.0);}
+  to{background-color : rgba(0.2, 0.5, 1.0, 1.0);}
+}
+
+@keyframes hov2 {
+  from{background-color : rgba(1.0, 1.0, 1.0, 0.0);}
+  to{background-color : rgba(0.7, 0.4, 0.1, 1.0);}
+}
